# rust-on-stm32

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  ts_disp.rs
src/drivers/: bsp.rs  display.rs  fmc.rs  ltdc.rs  mod.rs  touchscreen.rs
ui/: appwindow.slint  carousel_demo.slint
